--- a/freeze_orig/src/game.vcxproj
+++ b/freeze_orig/src/game.vcxproj
@@ -80,7 +80,9 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="freeze.h" />
     <ClInclude Include="game.h" />
+    <ClInclude Include="gslog.h" />
     <ClInclude Include="g_local.h" />
     <ClInclude Include="m_actor.h" />
     <ClInclude Include="m_berserk.h" />
@@ -106,8 +108,12 @@
     <ClInclude Include="m_supertank.h" />
     <ClInclude Include="m_tank.h" />
     <ClInclude Include="q_shared.h" />
+    <ClInclude Include="sl_packet.h" />
+    <ClInclude Include="stdlog.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="freeze.c" />
+    <ClCompile Include="gslog.c" />
     <ClCompile Include="g_ai.c" />
     <ClCompile Include="g_chase.c" />
     <ClCompile Include="g_cmds.c" />
@@ -156,6 +162,8 @@
     <ClCompile Include="p_view.c" />
     <ClCompile Include="p_weapon.c" />
     <ClCompile Include="q_shared.c" />
+    <ClCompile Include="sl_packet.c" />
+    <ClCompile Include="stdlog.c" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
