Add UI system with MOTD and menu functionality to freeze_new
- Implement new UI system (ui_system.h/.c) with configurable MOTD and interactive menus
- Add include guards to header files (q_shared.h, game.h, g_local.h)
- Integrate UI system with game initialization, player connection, and input handling
- Display team selection menu to spectators on server join (matches freeze_orig behavior)
- Simplify UI rendering to work within Quake 2 layout string limitations
- Update Visual Studio project files and AGENTS.md documentation
- Use separate UI state storage to avoid client structure modifications

--- a/freeze_new/src/game.vcxproj
+++ b/freeze_new/src/game.vcxproj
@@ -106,6 +106,7 @@
     <ClInclude Include="m_supertank.h" />
     <ClInclude Include="m_tank.h" />
     <ClInclude Include="q_shared.h" />
+    <ClInclude Include="ui_system.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="g_ai.c" />
@@ -156,6 +157,7 @@
     <ClCompile Include="p_view.c" />
     <ClCompile Include="p_weapon.c" />
     <ClCompile Include="q_shared.c" />
+    <ClCompile Include="ui_system.c" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
