Implement configurable start weapon system in freeze_new
- Add freeze.h/freeze.c with start_weapon system using bitwise flags
- Support weapons: shotgun(1), super shotgun(2), machinegun(4), chaingun(8),
  grenade launcher(16), rocket launcher(32), hyperblaster(64), railgun(128)
- Add start_armor cvar for configurable starting armor
- Integrate FT_PlayerWeapon() into PutClientInServer() spawn process
- Initialize cvars in FT_InitGame() called from InitGame()
- Update build system to include new freeze tag files
- Copy freeze.cfg with default start_weapon=35 (shotgun+super shotgun+rocket launcher)
- Clean implementation following Quake 2 conventions with automatic ammo allocation

--- a/freeze_new/src/game.vcxproj
+++ b/freeze_new/src/game.vcxproj
@@ -80,6 +80,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="freeze.h" />
     <ClInclude Include="game.h" />
     <ClInclude Include="g_local.h" />
     <ClInclude Include="m_actor.h" />
@@ -108,6 +109,7 @@
     <ClInclude Include="q_shared.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="freeze.c" />
     <ClCompile Include="g_ai.c" />
     <ClCompile Include="g_chase.c" />
     <ClCompile Include="g_cmds.c" />
