--- a/freeze_new/freeze.cfg
+++ b/freeze_new/freeze.cfg
@@ -36,14 +36,15 @@ set random_map 1
 set vote_percent 50
 set use_ready 0
 
-set hook_max_len 1000
-set hook_min_len 40
-// set hook_rpf 0 // no hook
-set hook_rpf 80 // how fast player moves
-set hook_speed 1100 // how fast hook moves
-set grapple_wall 1 // only grapple bodies
-
 set start_armor 2
+
+// Hook configuration
+set hook_max_length 1000
+set hook_min_length 40
+set hook_speed 1200 // how fast hook travels
+set hook_pull_speed 80 // how fast player moves toward hook
+set hook_wall_only 0 // 0 = can hook players, 1 = walls only
+
 // 1 shotgun
 // 2 super shotgun
 // 4 machinegun
@@ -56,4 +57,5 @@ set start_armor 2
 // shotgun + super shotgun + rocket launcher on respawn?
 // add the numbers
 // 1 + 2 + 32 = set start_weapon 35
+// Note: Grappling hook is always available as a built-in ability
 set start_weapon 35
